--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,10 +24,11 @@ packages = [
 
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.8,<3.12"
 segmentation-models-pytorch = "0.3.0"
 albumentations = "^1.3.0"
-
+scipy = "^1.8.0"
+matplotlib = "^3.6.0"
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
