--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ packages = [
 
 
 [tool.poetry.dependencies]
-python = "3.8"
+python = ">=3.8,<3.9"
 segmentation-models-pytorch = "0.3.0"
 albumentations = "^1.3.0"
 scipy = "^1.8.0"
