--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "segal"
-version = "0.1.1"
-description = "Sequence labeling active learning framework for Python"
+version = "0.1.2"
+description = "SegAL is an active learning freamwork for semantice segmentation."
 authors = ["Xu Liang <liangxu006@gmail.com>"]
 license = "MIT"
 readme = "README.md"
