--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,8 @@ jobs:
             run: black --check --exclude="notebooks" .
           - name: isort
             run: isort -c -v .
+          - name: mypy
+            run: mypy seqal
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
