--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
           - name: isort
             run: isort -c -v .
           - name: mypy
-            run: mypy seqal
+            run: mypy segal
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
